feat: add endpoint /api/reports/hari-ini
